# psycopg-toolkit

./: .coveragerc  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/: RELEASE.md  renovate.json
.github/workflows/: benchmark.yml  build-test.yml  release.yml
ai_docs/: 20251102_135000-psycopg-toolkit-pgvector-support.md  cr-claude.md  cr-comparison.md  cr-gemini.md  cr-synthesis.md  final-performance-summary.md  gemini-validation-of-claude-report.md  integration-test-refactoring-plan.md  jsonb-simplification-plan.md  jsonb-test-consolidation-final-report.md  jsonb-test-consolidation-plan.md  jsonb-test-consolidation-summary.md  jsonb-test-migration-guide.md  jsonb-test-review-report.md  tests-actually-needed.md
docs/: base_repository.md  database.md  index.rst  jsonb_support.md  psycopg_helper.md  transaction_manager.md
examples/: README.md  array_and_date_fields.py  basic_usage.py  complex_json_operations.py  jsonb_usage.py  jsonb_usage_simple.py  transaction_usage.py
scripts/: fix_readme.py
src/psyco_db/: __init__.py  exceptions.py
src/psyco_db/core/: __init__.py  config.py  database.py
src/psyco_db/repositories/: base.py
src/psycopg_toolkit/: __init__.py  exceptions.py
src/psycopg_toolkit/core/: config.py  database.py  factory.py  transaction.py
src/psycopg_toolkit/repositories/: base.py
src/psycopg_toolkit/utils/: json_handler.py  psychopg_helper.py  type_inspector.py
tests/: JSONB_TEST_SUMMARY.md  README.md  conftest.py  schema_and_data.py  test_array_fields.py  test_base_repository.py  test_data.py  test_database.py  test_database_container.py  test_date_fields.py  test_jsonb_edge_cases.py  test_jsonb_transactions.py  test_transaction.py
tests-old/unit/: test_base_repository_crud_json.py  test_base_repository_json_detection.py  test_base_repository_json_exception_handling.py  test_database_json_adapters.py
tests/edge_cases/: __init__.py  test_malformed_json.py
tests/integration/: test_array_fields.py  test_date_fields.py  test_jsonb_basic.py  test_jsonb_custom_processing.py  test_jsonb_edge_cases.py  test_jsonb_psycopg_adapters.py  test_jsonb_queries.py  test_jsonb_repository.py  test_jsonb_transactions.py  test_pgvector.py
tests/models/: __init__.py  jsonb_models.py
tests/performance/: README.md  __init__.py  test_jsonb_performance.py  test_jsonb_performance_extended.py
tests/repositories/: __init__.py  jsonb_repositories.py
tests/schema/: README.md  jsonb_test_schema.sql  manage_test_schema.py  setup_jsonb_tests.sql  teardown_jsonb_tests.sql
tests/sql/: init_test_schema.sql
tests/unit/: test_base_repository.py  test_base_repository_crud_json.py  test_base_repository_data_processing.py  test_base_repository_json_detection.py  test_base_repository_json_exception_handling.py  test_custom_json_encoder.py  test_database.py  test_database_json_adapters.py  test_field_detection.py  test_json_exceptions.py  test_json_handler.py  test_jsonb_models.py  test_transaction.py  test_type_inspector.py
