[tool.poetry]
name = "pysco-db"
version = "0.1.0"
description = "A Python PostgreSQL database utility"
authors = ["Ove Ranheim <oranheim@gmail.com>"]
readme = "README.md"
packages = [{ include = "psyco_db", from = "src" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.2.3"
psycopg-pool = "^3.2.4"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"  # Add this line
markers = [
    "asyncio: mark test as async",
]